-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.2.3, 6.5.0
-
None
-
Manjaro
Ubuntu 20.04, 22.04
-
a2dccbafc (dev), 4a1e88314 (6.5)
- Start Creator with the invalid style override 'kvantum':
QT_STYLE_OVERRIDE=kvantum ./qtcreator-6.0.2/bin/qtcreator -tcs
On the command line, you can read:
QApplication: invalid style override 'kvantum' passed, ignoring it. Available styles: Windows, Fusion
- Open the QML-Profiler in Debug mode.
There's just a white rectangle where the timeline should be. - Go to the "Flame Graph" tab.
There's just a white rectangle where the flame graph should be. - Right-click into that rectangle.
Creator crashes.
Two things seems to be wrong there:
- Obviously, Creator should not crash.
- When that style override is being ignored as Creator claims, passing it should not make a difference. Since it does make a difference, it seems to not be ignored properly.
- replaces
-
QTCREATORBUG-26917 Flame graph empty, crashes when clicked
-
- Closed
-