Clear invalid QApplication styleOverride

When QStyleFactory::create() is unable to find/create an override style
set with QT_STYLE_OVERRIDE or "-style", clear the styleOverride. Reason
for this is that Qt Quick Controls otherwise tries to use this invalid
style.

Task-number: QTBUG-100563
Change-Id: I48fa6c211ce27d902e2eaf90c34cb5694ad7ecfd
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit a2dccbafcf698715456a742743a5cdea9ddc8ae3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>